[package]
name = "antifa"
version = "0.1.0"
authors = ["Michael Sproul <micsproul@gmail.com>"]

[dependencies]
walkdir = "1.0.7"
ring = "0.11"
data-encoding = "1.1.2"
tokio-core = "0.1.4"
futures = "0.1.10"
futures-cpupool = "0.1.3"
env_logger = "0.4.1"
itertools = "0.6"

[dependencies.sequence_trie]
git = "https://github.com/michaelsproul/rust_sequence_trie"
branch = "btreemap"
features = ["btreemap"]
